<resources>
    <string name="app_name">HW8_Group34</string>
    <string name="setting">Settings</string>
    <string name="savecity">Save City</string>
    <string name="setCurrent">Set as Current City</string>
    <string name="currentNotSet">Current City not yet set</string>
    <string name="setButton">Set Current City</string>
    <string name="cityEdit">City Name (ie Charlotte)</string>
    <string name="countryEdit">Country Name (ie US)</string>
    <string name="searchCity">Search City</string>
    <string name="defaultSavedCities">There are no cities to display./n Search for a city using  the search boxes and save.</string>
    <string name="defaultCity">Charlotte, NC</string>
    <string name="defaulttemp">Temperature: 85.95 ° F</string>
    <string name="defaultTime">Last updated: x min ago</string>
    <string name="enterYourCity">Enter your city:</string>
    <string name="enterYourCountry">Enter your country:</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp_unit">temp_unit</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="choose_unit_summary">Choose between Celsius and Fahrenheit</string>
    <string name="celsius">c</string>
    <string name="temperature_unit_dialog_title">Select Temperature Unit</string>
    <string name="edit_pref_title">Current City</string>
    <string name="current_city_summary">Change Current City</string>
    <string name="curr_city">curr_city</string>
    <string name="currenty_city_dialog">Enter City Details</string>
    <string name="update_city_dialog">Update City Details</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="update">Update</string>
    <string name="done">Done</string>
    <string name="entry_city">Enter Your City</string>
    <string name="enter_county">Enter Your Country</string>
    <string name="temperature">Temperature: </string>
    <string name="updated">Updated: </string>
    <string name="dailyForcast">Daily Forcast for</string>
    <string name="headlines">Headlines</string>
    <string name="forcastOn">Forcast On</string>
    <string name="condit">Conditions</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="loadingData">Loading Data</string>
    <string name="extend">Click Here for extended forcast.</string>
    <string name="details">Click here for more details</string>
</resources>
