<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/temp_unit"
        android:positiveButtonText="@string/done"
        android:negativeButtonText="@string/cancel"
        android:entries="@array/temp_entries"
        android:entryValues="@array/temp_values"
        android:defaultValue="@string/celsius"
        android:title="@string/temperature_unit"
        android:dialogTitle="@string/temperature_unit_dialog_title"
        android:summary="@string/choose_unit_summary"
        android:persistent="true"
        />
    <com.example.joyrasmussen.hw8_group34.CurrentCityPreference
        android:key="@string/curr_city"
        android:title="@string/edit_pref_title"
        android:summary="@string/current_city_summary"
        android:persistent="true"
        android:dialogTitle="@string/currenty_city_dialog"

        />

</PreferenceScreen>