<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joyrasmussen.hw8_group34.MainActivity">

    <RelativeLayout
        android:id="@+id/currentCityLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/currentCityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/noCurrent"
            android:text="PlaceholderCity"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/currentWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currentCityName"
            android:layout_centerHorizontal="true"
            android:text="Placeholder "
            android:textSize="16sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/currentWeatherImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/currentWeather"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:id="@+id/tempholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currentWeatherImage"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currentTempTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/temperature"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/currentTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:text="99 C"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/holderUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tempholder"
            android:layout_below="@+id/tempholder"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currentUpdatedTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/updated"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/currentUpdatedLast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="xx mins ago"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/noCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:text="@string/currentNotSet"
            android:visibility="visible" />

        <Button
            android:id="@+id/setCurrentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/noCurrent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="19dp"
            android:onClick="setCurrentCityListener"
            android:text="@string/setButton"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/searchCityLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentCityLayout"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/cityMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/cityEdit" />

        <EditText
            android:id="@+id/countryMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cityMain"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/countryEdit" />

        <Button
            android:id="@+id/searchCityMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/countryMain"
            android:layout_centerHorizontal="true"
            android:onClick="searchCityListener"
            android:text="@string/searchCity" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/savedCityLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchCityLayout"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/savedCitiesTextMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/defaultSavedCities"
            android:textAlignment="center" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/savedCityRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/savedCitiesTextMain"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>
